--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'muli medium';
-  src: local('muli medium'), url('./fonts/Muli-Medium.ttf')
+  src: local('muli medium'), url('./fonts/Muli-Regular.ttf')
 }
 
 @font-face {
@@ -15,6 +15,10 @@
 
 html {
   font-size: 16px;
+}
+
+body {
+  margin: 0;
 }
 
 // Common
@@ -37,6 +41,20 @@ html {
     a {
       position: relative;
     }
+
+    .title {
+      font-family: 'muli medium';
+      margin: 0;
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .description {
+      font-family: 'alegreya';
+    }
+
+    .link {}
 }
 
 .text-container {
@@ -44,36 +62,56 @@ html {
   padding-right: 0.5rem;
 }
 
-//App
-.app-container {
-  padding-left: 5rem;
-  padding-right: 5rem;
+.heading {
+  margin: 0;
+  text-align: center;
+  margin-bottom: 4rem;
+  font-family: 'muli medium';
+  font-size: 1.5rem;
 }
+
+//App
+.app-container {}
 
 // NavFooter
 .navfooter-container {
   display: flex;
   justify-content: space-between;
+  background-color: #171810;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+  p {
+    font-family: 'impact';
+    color: #FFFFFF;
+  }
+
+  img {
+    width: 48px;
+    padding-left: 1rem;
+  }
 }
 
 // LandingPage
 .landing-page-container {
   display: flex;
   justify-content: center;
-  margin-bottom: 7.5rem;
+  padding-bottom: 7.5rem;
   text-align: center;
+  background-color: #171810;
+  p {
+    font-family: 'muli medium';
+    color: #FFFFFF;
+  }
 }
 
 // Projects
 .projects-container {
-
-  .heading {
-    margin: 0;
-    text-align: center;
-    margin-bottom: 4rem;
-  }
-
   margin-bottom: 7.5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .project-item-list {
@@ -91,9 +129,18 @@ html {
 .skills-container {
   display: flex;
   margin-bottom: 7.5rem;
+  background-color: #171810;
+  padding-top: 5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 4rem;
 
   .LHS {
     flex: 1;
+    padding-top: 6rem;
+    p {
+      color: #FFFFFF;
+    }
   }
 
   .RHS {
@@ -104,11 +151,50 @@ html {
       width: 100px;
       height: 100px;
       margin-right: 20px;
+      object-fit: contain;
+    }
+    .row {
+      display: flex;
     }
 
-    .first-row {
-      margin-bottom: 1rem;
-    }
+      .column {
+        display: flex;
+        align-items: center;
+        width: 13rem;
+        margin-bottom: 1rem;
+        p {
+          text-transform: uppercase;
+        }
+        .javascript {
+          color: #ffca00;
+        }
+        .redux {
+          color: #764abc;
+        }
+        .docker {
+          color: #009ddc;
+        }
+        .react {
+          color: #009ddc;
+        }
+        .node {
+          color: #679f5c;
+        }
+        .firebase {
+          color: #009ddc
+        }
+      }
+      .second {
+        margin-left: 5rem;
+      }
+
+  }
+
+  .skills-heading {
+    font-family: 'muli medium';
+    font-size: 1.5rem;
+    margin: 0;
+    margin-bottom: 1rem;
   }
 }
 
@@ -117,12 +203,6 @@ html {
   padding-left: 10rem;
   padding-right: 10rem;
   margin-bottom: 7.5rem;
-
-  .heading {
-    margin: 0;
-    text-align: center;
-    margin-bottom: 4rem;
-  }
 }
 
 .sub-blog-container {
