--- a/src/sass/components/landingpage.scss
+++ b/src/sass/components/landingpage.scss
@@ -1,19 +1,48 @@
-.landing-page-container {
-  display: flex;
-  justify-content: center;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  text-align: center;
-  background-color: #171810;
-  p {
-    font-family: 'muli regular';
-    color: #FFFFFF;
-    font-size: 1.2rem;
-    margin-top: 0;
-  }
+@import './../variables/variables.scss';
 
-  .first-row {
-    font-size: 2rem;
-    font-family: 'Lato bold';
+
+@media screen and (max-width: $md) {
+  .landing-page-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: center;
+    background-color: #171810;
+    p {
+      font-family: 'muli regular';
+      color: #FFFFFF;
+      font-size: 1.2rem;
+      margin-top: 0;
+    }
+
+    .first-row {
+      font-size: 2rem;
+      font-family: 'Lato bold';
+    }
+  }
+}
+
+@media screen and (min-width: $md) {
+  .landing-page-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    text-align: center;
+    background-color: #171810;
+    p {
+      font-family: 'muli regular';
+      color: #FFFFFF;
+      font-size: 1.2rem;
+      margin-top: 0;
+    }
+
+    .first-row {
+      font-size: 2rem;
+      font-family: 'Lato bold';
+    }
   }
 }
