--- a/src/sass/components/navfooter.scss
+++ b/src/sass/components/navfooter.scss
@@ -1,23 +1,53 @@
-.navfooter-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #171810;
-  padding-left: 5rem;
-  padding-right: 5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+@import './../variables/variables.scss';
 
-  p {
-    font-family: 'lato bold';
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    color: #FFFFFF;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-  img {
+@media screen and (max-width: $md) {
+  .navfooter-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #171810;
     padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
+    p {
+      font-family: 'lato bold';
+      text-transform: uppercase;
+      font-size: 0.8rem;
+      color: #FFFFFF;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    img {
+      padding-left: 1rem;
+    }
+  }
+}
+
+@media screen and (min-width: $md) {
+  .navfooter-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #171810;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
+    p {
+      font-family: 'lato bold';
+      text-transform: uppercase;
+      font-size: 0.8rem;
+      color: #FFFFFF;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    img {
+      padding-left: 1rem;
+    }
   }
 }
