refactor: styling for mobile view

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -5,3 +5,4 @@
 @import 'components/navfooter.scss';
 @import 'components/project.scss';
 @import 'components/projectitem.scss';
+@import 'components/skills.scss';
