--- a/src/sass/components/blog.scss
+++ b/src/sass/components/blog.scss
@@ -2,6 +2,54 @@
 
 @media screen and (max-width: $md) {
   .blog-container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-bottom: 3rem;
+
+    .text-container {
+      padding-left: 2rem;
+      padding-right: 2rem;
+      display: flex;
+      align-items: center;
+      .title {
+        font-size: 1.5rem;
+        font-family: 'roboto regular';
+        margin-bottom: 0.5rem;
+        color: #00BEC5;
+      }
+      .date {
+        font-size: 0.8rem;
+        font-style: oblique;
+        margin-top: 0;
+        margin-bottom: 1.8rem;
+      }
+      .description {
+        font-family: 'alegreya regular';
+      }
+    }
+  }
+
+  .sub-blog-container {
+    display: block;
+    justify-content: space-between;
+  }
+
+  .icons-tribute-container {
+    display: flex;
+    justify-content: center;
+    background-color: #222831;
+    a {
+      text-decoration: none;
+      color: #C8C8C8;
+    }
+    p {
+      font-size: 0.75rem;
+    }
+  }
+ }
+
+@media screen and (min-width: $md) {
+  .blog-container {
     padding-left: 15rem;
     padding-right: 15rem;
     margin-bottom: 7.5rem;
@@ -37,7 +85,7 @@
   .icons-tribute-container {
     display: flex;
     justify-content: center;
-    background-color: #171810;
+    background-color: #222831;
     a {
       text-decoration: none;
       color: #C8C8C8;
