--- a/src/sass/components/navfooter.scss
+++ b/src/sass/components/navfooter.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #171810;
+    background-color: #222831;
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 1rem;
@@ -22,6 +22,7 @@
 
     img {
       padding-left: 1rem;
+      width: 24px;
     }
   }
 }
@@ -31,7 +32,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #171810;
+    background-color: #222831;
     padding-left: 5rem;
     padding-right: 5rem;
     padding-top: 1rem;
