refactor: styling for mobile view

--- a/src/sass/components/skills.scss
+++ b/src/sass/components/skills.scss
@@ -41,6 +41,7 @@
           p {
             text-transform: uppercase;
             font-family: 'lato bold';
+            font-size: 0.75rem;
           }
           .javascript {
             color: #ffca00;
